--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern",
+  "name": "google-book-search",
   "version": "1.0.0",
-  "description": "Mern Demo",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.11.12"
