--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "google-book-search",
   "version": "1.0.0",
-  "description": "",
+  "description": "Google Books",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
